@@ -1,19 +1,17 @@
 package cuchaz.enigma.gui.config;
 
-import java.awt.Font;
-import java.util.HashSet;
-import java.util.Set;
-
-import javax.swing.UIManager;
-
-import com.google.common.collect.ImmutableMap;
-import de.sciss.syntaxpane.DefaultSyntaxKit;
-
 import cuchaz.enigma.gui.EnigmaSyntaxKit;
 import cuchaz.enigma.gui.events.ThemeChangeListener;
 import cuchaz.enigma.gui.highlight.BoxHighlightPainter;
 import cuchaz.enigma.gui.util.ScaleUtil;
 import cuchaz.enigma.source.RenamableTokenType;
+import de.sciss.syntaxpane.DefaultSyntaxKit;
+
+import javax.swing.*;
+import java.awt.Font;
+import java.util.HashSet;
+import java.util.Map;
+import java.util.Set;
 
 public class Themes {
 
@@ -31,7 +29,7 @@ public class Themes {
 		EnigmaSyntaxKit.invalidate();
 		DefaultSyntaxKit.initKit();
 		DefaultSyntaxKit.registerContentType("text/enigma-sources", EnigmaSyntaxKit.class.getName());
-		ImmutableMap<RenamableTokenType, BoxHighlightPainter> boxHighlightPainters = getBoxHighlightPainters();
+		Map<RenamableTokenType, BoxHighlightPainter> boxHighlightPainters = getBoxHighlightPainters();
 		listeners.forEach(l -> l.onThemeChanged(laf, boxHighlightPainters));
 		ScaleUtil.applyScaling();
 		UiConfig.save();
@@ -86,8 +84,8 @@ public class Themes {
 		}
 	}
 
-	public static ImmutableMap<RenamableTokenType, BoxHighlightPainter> getBoxHighlightPainters() {
-		return ImmutableMap.of(
+	public static Map<RenamableTokenType, BoxHighlightPainter> getBoxHighlightPainters() {
+		return Map.of(
 				RenamableTokenType.OBFUSCATED, BoxHighlightPainter.create(UiConfig.getObfuscatedColor(), UiConfig.getObfuscatedOutlineColor()),
 				RenamableTokenType.PROPOSED, BoxHighlightPainter.create(UiConfig.getProposedColor(), UiConfig.getProposedOutlineColor()),
 				RenamableTokenType.DEOBFUSCATED, BoxHighlightPainter.create(UiConfig.getDeobfuscatedColor(), UiConfig.getDeobfuscatedOutlineColor()),
